# Farsight

./: .gitignore  README.md  pyproject.toml
data/preprocessed/: match_stat_db.csv  player_db.csv  player_stat_db.csv
data/raw/: 2014_LoL_esports_match_data_from_OraclesElixir.csv  2015_LoL_esports_match_data_from_OraclesElixir.csv  2016_LoL_esports_match_data_from_OraclesElixir.csv  2017_LoL_esports_match_data_from_OraclesElixir.csv  2018_LoL_esports_match_data_from_OraclesElixir.csv  2019_LoL_esports_match_data_from_OraclesElixir.csv  2020_LoL_esports_match_data_from_OraclesElixir.csv  2021_LoL_esports_match_data_from_OraclesElixir.csv  2022_LoL_esports_match_data_from_OraclesElixir.csv  2023_LoL_esports_match_data_from_OraclesElixir.csv  2024_LoL_esports_match_data_from_OraclesElixir(1).csv  complete_raw_data.csv
farsight/: data.py  sql_helpers.py
farsight/data/: preprocess.py
farsight/db/: connection.py  queries.py  query_helpers.py
farsight/models/: nn.pt
farsight/nn/: dataset.py  model.py  nn_utils.py  trainer.py  validater.py
scripts/: README.md  build_dataset.py  merge_csv.py  nullify_columns.py  prepare_csv.py  runner.sh
scripts/sql/: 0_create_tables.sql  1_copy_csv.sql  2_copy_csv.sql  2_dataset_schema.sql
tests/data/: test_preprocess.py
tests/nn/: test_dataset.py
