[tool.poetry]
name = "farsight"
version = "0.1.0"
description = "A League of Legends player prop predictor uutilizing a neural n network."
authors = ["Thai Villaluna <thaivillaluna@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
